[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/GreenChecker.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Turret001.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Level1.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/LandDrone001.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Status.tscn" type="PackedScene" id=5]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 20, 20, 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[node name="Level1" type="Spatial"]
script = ExtResource( 3 )
enemy1 = ExtResource( 4 )
status_hud_path = NodePath("Health")

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 3 )

[node name="Turret001" parent="." groups=["ally"] instance=ExtResource( 2 )]

[node name="Health" parent="." instance=ExtResource( 5 )]

[connection signal="player_dead" from="Turret001" to="." method="_on_Turret001_player_dead"]
[connection signal="player_hurt" from="Turret001" to="." method="_on_Turret001_player_hurt"]
